Add windows service config role

--- a/ssh.cfg
+++ b/ssh.cfg
@@ -22,3 +22,10 @@ Host *
   ControlPath /tmp/%h-%r
   ControlPersist 5m
   StrictHostKeyChecking no
+
+#windows openssh variables
+package_name: openssh
+parameters: /SSHServerFeature
+service_name: SSHD
+local_port: 22
+protocol_name: tcp
